[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-advanced-settings"
version = "0.0.1"
authors = [{ name = "Alessandro Ferrini", email = "im@alessandroferrini.com" }]
description = "Django settings with Pydantic 2"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'pydantic >= 2.0.0, < 3',
    "pydantic_settings",
    "pydantic[email]",
]

[tool.setuptools]
include-package-data = true

[project.urls]
Homepage = "https://github.com/Alurith/django-advanced-settings"
Issues = "https://github.com/Alurith/django-advanced-settings/issues"
